--- a/Machine Learning  Application/coding_practices/house-price-prediction-model/train_model.ipynb
+++ b/Machine Learning  Application/coding_practices/house-price-prediction-model/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "id": "db6a35ca-49bd-4114-8ee4-9f64403371d5",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
